syntax = "proto3";

package auth;

service UserService{
    rpc CreateUser (CreateUserDto) returns (User) {}
    rpc FindAllUsers (Empty) returns (Users) {}
    rpc FindOneUser (FindOneUserDto) returns (User) {}
    rpc UpdateUser (UpdateUserDto) returns (User) {}
    rpc RemoveUser (FindOneUserDto) returns (User) {}
}

message FindOneUserDto {
    string id = 1;
}

message UpdateUserDto{
    string id = 1;
}

message Empty {};

message Users {
    repeated User users = 1;
}

message CreateUserDto {
    string username = 1;
    string password = 2;
}

message User {
    string id = 1;
    string username = 2;
    string password = 3;
}